2008-04-30  Jaroslav Hajek <highegg@gmail.com>

	* specfun/log2.m: Delete. 
	* specfun/Makefile.in (SOURCES): Delete it from the list.

2008-04-29  David Bateman  <dbateman@free.fr>

	pkg/pkg.m: Also set archprefix with the -local and -global options.

2008-04-29  Jonathan Stickel  <jjstickel@vcn.com>

	* statistics/distributions/tcdf.m, statistics/distributions/tinv.m:
	Doc fix.

2008-04-25  John W. Eaton  <jwe@octave.org>

	* miscellaneous/dbstack.m: New function.
	* miscellaneous/Makefile.in: Add it to the list.

2008-04-21  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m (gnuplot_position_colorbox): New arg, obj.
	Change caller.  Improve sizing and position of colorbox for subplots.
	* plot/colorbar.m: New demos.

2008-04-16  Soren Hauberg  <hauberg@gmail.com>

	* plot/__gnuplot_version__.m: Display error if gnuplot is not found.

2008-04-15  John W. Eaton  <jwe@octave.org>

	* plot/view.m: Get values from current axes if nargin == 0.

2008-04-15  David Bateman  <dbateman@free.fr>

	* plot/__patch__.m: Fix for NaN values in faces of patches.
	
2008-04-14  David Bateman  <dbateman@free.fr>

	* plot/rose.m: Add missing comment mark that causes issues with
	octave-forge function referencing.
	* deprecated/lchol.m, deprecated/splchol.m: Fix texinfo errors.

2008-04-09  John W. Eaton  <jwe@octave.org>

	* deprecated/beta_cdf.m, deprecated/beta_inv.m,
	deprecated/beta_pdf.m, deprecated/beta_rnd.m,
	deprecated/binomial_cdf.m, deprecated/binomial_inv.m,
	deprecated/binomial_pdf.m, deprecated/binomial_rnd.m,
	deprecated/chisquare_cdf.m, deprecated/chisquare_inv.m,
	deprecated/chisquare_pdf.m, deprecated/chisquare_rnd.m,
	deprecated/clearplot.m, deprecated/clg.m, deprecated/com2str.m,
	deprecated/exponential_cdf.m, deprecated/exponential_inv.m,
	deprecated/exponential_pdf.m, deprecated/exponential_rnd.m,
	deprecated/f_cdf.m, deprecated/f_inv.m, deprecated/f_pdf.m,
	deprecated/f_rnd.m, deprecated/gamma_cdf.m,
	deprecated/gamma_inv.m, deprecated/gamma_pdf.m,