@@ -37,8 +37,7 @@ endfunction
 %!test
 %! v = [pi/2*i, -pi/2*i];
 %! x = [-i, i];
-%! assert(all (abs (acsch (x) - v) < sqrt (eps))
-%! );
+%! assert(all (abs (acsch (x) - v) < sqrt (eps)));
 
 %!error acsch ();
 
