@@ -37,8 +37,7 @@ endfunction
 %!test
 %! v = [0, pi*i];
 %! x = [1, -1];
-%! assert(all (abs (asech (x) - v) < sqrt (eps))
-%! );
+%! assert(all (abs (asech (x) - v) < sqrt (eps)));
 
 %!error asech ();
 
